[gd_scene load_steps=4 format=2]

[ext_resource path="res://MatConfig.gd" type="Script" id=1]
[ext_resource path="res://CubePreview.tscn" type="PackedScene" id=2]

[sub_resource type="GDScript" id=1]
script/source = "extends RichTextLabel

func _ready():
    connect(\"meta_clicked\", self, \"open\")
func open(meta):
    var s = str(meta)
    if s.begins_with(\"https://\"):
        OS.shell_open(s)
"

[node name="MatConfig" type="Control" groups=["MatConfig"]]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="ClickBlocker" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.752941 )

[node name="UI" type="HSplitContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 14.0
margin_right = -13.0
dragger_visibility = 2

[node name="Images" type="VBoxContainer" parent="UI"]
margin_right = 220.0
margin_bottom = 600.0
rect_min_size = Vector2( 220, 0 )

[node name="Label2" type="Label" parent="UI/Images"]
margin_right = 220.0
margin_bottom = 48.0
text = "
Material Editor
"
align = 1
autowrap = true

[node name="SideL" type="Label" parent="UI/Images"]
margin_top = 52.0
margin_right = 220.0
margin_bottom = 66.0
text = "Side:"

[node name="SideI" type="TextureRect" parent="UI/Images"]
margin_top = 70.0
margin_right = 220.0
margin_bottom = 134.0
rect_min_size = Vector2( 0, 64 )
expand = true
stretch_mode = 6

[node name="TopL" type="Label" parent="UI/Images"]
margin_top = 138.0
margin_right = 220.0
margin_bottom = 152.0
text = "Top: (none)"

[node name="TopI" type="TextureRect" parent="UI/Images"]
margin_top = 156.0
margin_right = 220.0
margin_bottom = 220.0
rect_min_size = Vector2( 0, 64 )
expand = true
stretch_mode = 6

[node name="Richie" type="RichTextLabel" parent="UI/Images"]
margin_top = 224.0
margin_right = 220.0
margin_bottom = 359.0
bbcode_enabled = true
bbcode_text = "Please drag and drop another image to add the \"Top\" texture. You can swap the Side and Top afterwards.

Images for 12x4 and 4x4 mode should be autotile tilesheets with no spacing or padding. Try: [color=#40A0FF][url]https://wareya.github.io/webtyler/[/url][/color]"
text = "Please drag and drop another image to add the \"Top\" texture. You can swap the Side and Top afterwards.

Images for 12x4 and 4x4 mode should be autotile tilesheets with no spacing or padding. Try: https://wareya.github.io/webtyler/"
fit_content_height = true
script = SubResource( 1 )

[node name="TilingMode" type="OptionButton" parent="UI/Images"]
margin_top = 363.0
margin_right = 220.0
margin_bottom = 383.0
text = "Tiling Mode"

[node name="Transparent" type="OptionButton" parent="UI/Images"]
margin_top = 387.0
margin_right = 220.0
margin_bottom = 407.0

[node name="TransparentMode" type="OptionButton" parent="UI/Images"]
margin_top = 411.0
margin_right = 220.0
margin_bottom = 431.0

[node name="Swap" type="Button" parent="UI/Images"]
visible = false
margin_top = 327.0
margin_right = 150.0
margin_bottom = 347.0
text = "Swap"

[node name="Done" type="Button" parent="UI/Images"]
visible = false
margin_top = 327.0
margin_right = 150.0
margin_bottom = 347.0
text = "Done"

[node name="Control" type="Control" parent="UI/Images"]
margin_top = 435.0
margin_right = 220.0
margin_bottom = 564.0
size_flags_vertical = 3

[node name="Cancel" type="Button" parent="UI/Images"]
margin_top = 568.0
margin_right = 220.0
margin_bottom = 588.0
text = "Cancel"

[node name="Control2" type="Control" parent="UI/Images"]
margin_top = 592.0
margin_right = 220.0
margin_bottom = 600.0
rect_min_size = Vector2( 0, 8 )

[node name="CubePreview" parent="UI" instance=ExtResource( 2 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 220.0
margin_right = 997.0
margin_bottom = 600.0
